# compliance-audit-generator

./: .gitignore  SKILL.md
references/: materials.md
results/: ~$检查工作底稿_0325_114142.xlsx  检查工作底稿_0325_114142.xlsx
scripts/: .env.example  README.md  pyproject.toml  tools.py
scripts/MinerU_full_zip/1.证券期货经营机构及其工作人员廉洁从业规定_docx/: 39753cd8-387e-49d5-9c31-f351acb98f64_content_list.json  39753cd8-387e-49d5-9c31-f351acb98f64_model.json  content_list_v2.json  full.md  layout.json
scripts/MinerU_full_zip/2.æ_è_ç_è_æ_ºæ_å_å_å_ä½_äººå_å_æ_ä_ä_å_æ_½ç_å---910cccf2-566c-4fac-be64-f3a0596aae9e_docx/: content_list_v2.json  fb0cb7d0-47f0-48bd-bcb6-e98b7dea4d24_content_list.json  fb0cb7d0-47f0-48bd-bcb6-e98b7dea4d24_model.json  layout.json
scripts/MinerU_full_zip/2.期货经营机构及其工作人员廉洁从业实施细则_docx/: content_list_v2.json  f7c33f86-1202-4b88-9b2d-6517552e8df5_content_list.json  f7c33f86-1202-4b88-9b2d-6517552e8df5_model.json  full.md  layout.json
scripts/docs/superpowers/specs/: 2026-03-19-clause-similarity-merge-design.md
scripts/src/planner_modules/: __init__.py  modules.py  prompts.py
scripts/src/shot_table_modules/: __init__.py  modules.py
scripts/src/utils/: __init__.py  database_factory.py  get_dotenv.py  logger.py  minerU_api_service.py  mineru_api.py  models.py  rag.py
scripts/tests/: test_regressions.py
